@@ -13,7 +13,7 @@ INCLUDES = -I.. @XINCLUDES@ @MOTIF_INCLUDES@ $(HOMEDEF) $(GRIFLAGS) \
 Xamine_LDFLAGS=  -g 
 Xamine_LDADD=  $(PARSEOBJECTS)  @XLIBSW@ @MOTIF_LIBSW@ @XTLIBSW@ @GDLDSW@  \
 		$(TCL_LDFLAGS) 						\
-	        -lXm -lXt -lX11 -lm -lfl $(X11EXTRA_LDFLAGS)
+	        -lXm -lXt -lX11 -lm -lfl $(X11EXTRA_LDFLAGS) 
 # Xamine_LDADD = $(PARSEOBJECTS) -lXm -lXt -lX11 -lm -lfl $(X11EXTRA_LDFLAGS)
 
 #  @LD_EXTRA_FLAGS@
